mp3dec: detect CBR and use CBR axiom to seek

This should also work reasonable with truncated and growing mp3s.
Fixes Ticket2590

Signed-off-by: Michael Niedermayer <michaelni@gmx.at>
(cherry picked from commit e096283ea55bc36a637b47329e19ddb26fb1440b)

Conflicts:
	libavformat/mp3dec.c